# homebrew-termo

./: .gitignore  DEVELOPING.md  LICENSE  README.md  macro-cli.rb  macro.py  pyproject.toml  setup.py  termo.py  termo.rb
app/: default_group.py
app/commands/: base_command.py  cancel.py  delete.py  desc.py  edit.py  exec.py  find.py  list.py  new.py  remote.py  save.py
app/utils/: click_utils.py  config_utils.py  diff_utils.py
termo/: DEVELOPING.md  README.md  setup.py  termo.py  termo.rb
