[tool.poetry]
name = "termo"
version = "1.1.0"
description = ""
authors = ["Ajay Prem Shankar <ajaypremshankar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
setuptools = "^75.4.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
